# mediapipe_face_mesh

./: .gitattributes  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/cmake/: CMakeLists.txt
example/: README.md  pubspec.yaml
src/: CMakeLists.txt  face_detection_short_range.cc  mediapipe_face.h  mediapipe_face_detection_short_range.cc  mediapipe_face_mesh.c  mediapipe_face_mesh.cc  mediapipe_face_mesh.h  tflite_runtime.h
src/include/tensorflow/lite/c/: c_api.h  c_api_types.h
src/include/tensorflow/lite/java/demo/: build.gradle  settings.gradle
src/include/tensorflow/lite/java/demo/app/: build.gradle
src/include/tensorflow/lite/java/ovic/demo/: build.gradle  settings.gradle
src/include/tensorflow/lite/java/ovic/demo/app/: OvicBenchmarkerActivity.java  build.gradle
src/include/tensorflow/lite/java/src/main/java/org/tensorflow/lite/: DataType.java  DataTypeUtils.java  Delegate.java  DelegateFactory.java  Interpreter.java  InterpreterApi.java  InterpreterFactory.java  InterpreterFactoryApi.java  InterpreterFactoryImpl.java  InterpreterImpl.java  NativeInterpreterWrapper.java  NativeInterpreterWrapperExperimental.java  NativeSignatureRunnerWrapper.java  RuntimeFlavor.java  Tensor.java  TensorFlowLite.java  TensorImpl.java  package-info.java
src/include/tensorflow/lite/java/src/test/java/org/tensorflow/lite/: DataTypeTest.java  InterpreterApiNoRuntimeTest.java  InterpreterApiTest.java  InterpreterCustomizedAndroidBuildTest.java  InterpreterFlexTest.java  InterpreterFlexWithCustomOpsTest.java  InterpreterMobileNetTest.java  InterpreterTest.java  InterpreterTestHelper.java  NativeInterpreterWrapperTest.java  NnApiDelegateNativeTest.java  SupportedFeatures.java  TensorFlowLiteInvalidNativeLibTest.java  TensorFlowLiteNoNativeLibTest.java  TensorFlowLiteTest.java  TensorTest.java  TestInit.java  TestUtils.java
src/include/tensorflow/lite/java/src/testhelper/java/org/tensorflow/lite/: TestHelper.java
(+92 files in other folders)
